# seccamp2024_D2

./: .gitignore  01_Inter-Rater_Agreement.ipynb  02_Dawid-Skene_Aggregation.ipynb  LICENSE  README.md  pyproject.toml
